<resources>
    <string name="app_name">FreightRoll</string>
    <string name="title_activity_login">LOGIN</string>
    <string name="title_activity_register">SIGN UP</string>
    <string name="title_button_back">Back</string>
    <string name="title_fragment_board">LOAD BOARD</string>
    <string name="title_fragment_shipments">LIVE SHIPMENTS</string>
    <string name="title_fragment_messages">MESSAGES</string>
    <string name="title_fragment_account">ACCOUNT</string>

    <!-- Strings related to the SplashScreen -->
    <string name="sp_button_register">Create your account</string>
    <string name="sp_button_login">Login to your account</string>
    <string name="sp_text_title">Your Digital Freight Partner</string>
    <string name="sp_text_comment">Lorem ipsum dolor sit amet consectetuer adisciping elitaes aenean.</string>

    <!-- Strings related to the LoginScreen -->
    <string name="lg_text_title">Welcome Back!</string>
    <string name="lg_placeholder_email">Email</string>
    <string name="lg_placeholder_password">Password</string>
    <string name="lg_button_login">Login</string>

    <!-- Strings related to the SignupScreen -->
    <string name="rg_text_title">Join FreightRoll</string>
    <string name="rg_text_comment">Enter your info below and a member of our team will update you when your account is live.</string>
    <string name="rg_hint_first_name">First Name</string>
    <string name="rg_hint_last_name">Last Name</string>
    <string name="rg_hint_mc_number">MC Number</string>
    <string name="rg_hint_email_address">E-mail Address</string>
    <string name="rg_hint_password">Password</string>
    <string name="rg_hint_truck_type">Truck Type</string>
    <string name="rg_button_register">Create Account</string>

    <!-- Strings related to the tabs navigation -->
    <string name="nav_load_board">Load Board</string>
    <string name="nav_live_shipments">Live Shipments</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_account">Account</string>

    <!-- Strings related to the Account Screen -->
    <string name="as_toggle_pickups">Available for Pickups</string>
    <string name="as_text_account">Account</string>
    <string name="as_button_edit">Edit account info</string>
    <string name="as_button_change_password">Change password</string>
    <string name="as_button_logout">Log out</string>
    <string name="as_text_freightroll">FreightRoll</string>
    <string name="as_button_about">About</string>
    <string name="as_button_policy">Privacy Policy</string>
    <string name="as_button_contact">Contact Us</string>

    <!-- Strings related to the Load Board Screen -->
    <string name="bs_toggle_pickups">Available for Pickups</string>
    <string name="bs_button_pickup">Desired Pickup</string>
    <string name="bs_button_destination">Desired Destination</string>
    <string name="bs_text_no_shipment">There are no shipments right now.</string>
    <string name="bs_text_trucktype">Truck Type</string>
    <string name="bs_text_showall">Show All</string>
    <string name="bs_text_flatbed">Flatbed</string>
    <string name="bs_text_dryvan">Dry Van</string>
    <string name="bs_text_stepdeck">Step Deck</string>
    <string name="bs_text_ltl">LTL</string>
    <string name="bs_text_cancel">Cancel</string>
    <string name="bs_text_selectdeadhead">Select DeadHead</string>
    <string name="bs_50_miles">50 miles</string>
    <string name="bs_100_miles">100 miles</string>
    <string name="bs_150_miles">150 miles</string>
    <string name="bs_200_miles">200 miles</string>
    <string name="bs_50_mi">50mi</string>
    <string name="bs_100_mi">100mi</string>
    <string name="bs_150_mi">150mi</string>
    <string name="bs_200_mi">200mi</string>
    <string name="bs_select_pickup_date">Select Pickup Date</string>
    <string name="bs_shipments">Shipments</string>
    <string name="bs_sort_shipments">Sort Shipements</string>
    <string name="bs_by_relevance">By Relevance</string>
    <string name="bs_by_rate">By Rate</string>
    <string name="bs_by_distance">By Distance</string>
    <string name="bs_by_pickup_date">By Pickup Date</string>
    <string name="bs_by_delivery_date">By Delivery Date</string>
    <string name="bs_comment_drop_pin">Please set your desired pickup location</string>

    <string name="pk_title">DESIRED PICKUP</string>
    <string name="pk_button_save">Save</string>
    <string name="pk_comment_search">Search</string>
    <string name="pk_comment_select_a_pickup_point">Select a pickup point</string>
    <string name="pk_button_my_location">My Location</string>
    <string name="pk_comment_save">Do you want to save this pin?</string>
    <string name="pk_yes">Yes</string>
    <string name="pk_no">No</string>
    
    <string name="sd_title">Details</string>
    <string name="sd_rate">Rate</string>
    <string name="sd_truck_type">Truck Type</string>
    <string name="sd_weight">Weight</string>
    <string name="sd_accept_shipment">Accept Shipment</string>
    <string name="sd_enter_your_bid">Enter Your Bid</string>
    <string name="sd_pickup_information">Pickup Information</string>
    <string name="sd_address">Address</string>
    <string name="sd_appointment">Appointment</string>
    <string name="sd_date_range">Date Range</string>
    <string name="sd_shipping_hours">Shipping Hours</string>
    <string name="sd_pickup_instructions">Pickup Instructions</string>
    <string name="sd_dropoff_information">Dropoff Information</string>
    <string name="sd_dropoff_instructions">Dropoff Instructions</string>
    <string name="sd_accept_load">Accept Load?</string>
    <string name="sd_shipment_accepted">Shipment Accepted!</string>
    <string name="sd_yes">Yes</string>
    <string name="sd_no">No</string>
    <string name="sd_ok">Ok</string>
    <string name="sd_comment_enter_bid">Enter your sum below to bid on this shipment.</string>
    <string name="sd_comment_submitting_bid">Submitting a bid means you agree with our </string>
    <string name="sd_terms_service">Terms of Service</string>
    <string name="sd_cancel">Cancel</string>
    <string name="sd_submit">Submit</string>
    <string name="bid_entered">Bid Entered:</string>
</resources>
