<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_round">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/transparent_bottom_line_2"
        android:gravity="center"
        android:text="@string/bs_sort_shipments"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_relevance"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/textView16"
        android:background="@drawable/transparent_bottom_line_2"
        android:text="@string/bs_by_relevance"
        android:textAllCaps="false"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_rate"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/btn_relevance"
        android:background="@drawable/transparent_bottom_line_2"
        android:text="@string/bs_by_rate"
        android:textAllCaps="false"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_distance"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/btn_rate"
        android:background="@drawable/transparent_bottom_line_2"
        android:text="@string/bs_by_distance"
        android:textAllCaps="false"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_pickup_date"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/btn_distance"
        android:background="@drawable/transparent_bottom_line_2"
        android:text="@string/bs_by_pickup_date"
        android:textAllCaps="false"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_delivery_date"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/btn_pickup_date"
        android:background="@drawable/transparent_bottom_line_2"
        android:text="@string/bs_by_delivery_date"
        android:textAllCaps="false"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/btn_delivery_date"
        android:background="@color/colorTransparent"
        android:text="@string/bs_text_cancel"
        android:textSize="14sp" />
</RelativeLayout>
