<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="carrier.freightroll.com.freightroll.LoginActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edittext_bottom_line"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/header_btn_icon_back"
            android:layout_width="16dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@color/colorTransparent"
            app:srcCompat="@drawable/arrow_back" />

        <Button
            android:id="@+id/header_btn_text_back"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:background="@color/colorTransparent"
            android:gravity="left|center_vertical"
            android:paddingLeft="4dp"
            android:text="@string/title_button_back"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title_activity_login"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/lg_text_title"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="52dp"
            android:ems="10"
            android:hint="@string/lg_placeholder_email"
            android:inputType="textEmailAddress"
            android:tag="1"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:hint="@string/lg_placeholder_password"
            android:inputType="textPassword"
            android:paddingRight="32dp"
            android:tag="2"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" />

        <ImageButton
            android:id="@+id/btn_eye"
            android:layout_width="32dp"
            android:layout_height="28dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorTransparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email"
            app:srcCompat="@drawable/pass_visible" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/button_round_primary"
            android:tag="3"
            android:text="@string/lg_button_login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
