<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PickupActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edittext_bottom_line"
        android:orientation="horizontal"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/btn_back1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:focusable="true"
            android:clickable="true"
            android:onClick="goBack">

            <ImageButton
                android:id="@+id/header_btn_icon_back"
                android:layout_width="16dp"
                android:layout_height="match_parent"
                android:background="@color/colorTransparent"
                android:clickable="false"
                android:focusable="false"
                app:srcCompat="@drawable/arrow_back" />

            <Button
                android:id="@+id/header_btn_text_back"
                android:layout_width="54dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:background="@color/colorTransparent"
                android:clickable="false"
                android:focusable="false"
                android:gravity="left|center_vertical"
                android:text="@string/title_button_back"
                android:textAllCaps="false"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/pk_title"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/htn_save"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="false"
            android:background="@color/colorTransparent"
            android:gravity="right|center_vertical"
            android:onClick="save"
            android:text="@string/pk_button_save"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ly_place"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <SearchView
            android:id="@+id/srch_place"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false" />

    </LinearLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_place" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="23dp"
            android:layout_height="32dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/pickup_location" />

        <TextView
            android:id="@+id/txt_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:hint="@string/pk_comment_select_a_pickup_point"
            android:textSize="18sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>